2004-08-14  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/mach/hurd/i386/init-first.c (_hurd_stack_setup): Let gcc
	clobber the `ebp' register.
	* sysdeps/mach/hurd/i386/Makefile (CFLAGS-init-first.c): Removed.
	Reverts change from 2004-05-07 by Jeroen Dekkers.

	* sysdeps/mach/hurd/i386/init-first.c (init): Changed the type of
	NEWSP from `void *' to `int *'.  Changed all casts accordingly.

2004-08-31  Jakub Jelinek  <jakub@redhat.com>

	* wcsmbs/wcsmbsload.c (__wcsmbs_getfct): Move attribute_hidden
	before return type.
	* locale/localename.c (__current_locale_name): Likewise.

2004-08-30  Roland McGrath  <roland@frob.com>

	* scripts/extract-abilist.awk: If `lastversion' variable defined, omit
	later sets from output.
	* Makerules (check-abi): Pass option to set that with value of
	LIB-abi-frozen variable if one is set.

	* abilist/libcidn.abilist: New file (empty).

2004-08-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/bits/posix1_lim.h (_POSIX_CHILD_MAX, _POSIX_OPEN_MAX): If
	not __USE_XOPEN2K, use the Unix98 mandated values.

2004-08-27  Roland McGrath  <roland@redhat.com>

	* configure.in (usetls): Default to yes.
	* configure: Regenerated.

2004-08-26  Roland McGrath  <roland@redhat.com>

	* configure.in (add_ons_automatic): New variable, set to yes or no
	indicating --enable-add-ons with no explicit list.
	(running add-on fragments): Allow a fragment to modify $libc_add_on
	and have that affect its place in the list of add-ons to use.
	* configure: Regenerated.

2004-08-26  Ulrich Drepper  <drepper@redhat.com>

	* nscd/cache.c: Major rewrite.  The data is now optionally kept in
	a mmaped memory region which is automatically mirrored on disk.
	This implements persistent data storage.  The Memory handled
	needed to be completely revamped, it now uses a garbage collection
	mechanism instead of malloc.
	* nscd/connections.c: Likewise.
	* nscd/nscd.c: Likewise.
	* nscd/nscd.h: Likewise.
	* nscd/nscd_conf.c: Likewise.
	* nscd/nscd_stat.c: Likewise.